# MassageApp

./: .dockerignore  .env  Dockerfile.client  Dockerfile.server  Docker起動手順.md  GCP_TROUBLESHOOTING.md  LETSENCRYPT_SETUP.md  MQTT_TLS_SETUP.md  README.md  config.yaml  debug_trigger.py  docker-compose.yml  gmail-idle.service  gmail_idle_simple_test.py  gmail_idle_to_mqtt.py  gmail_idle_to_mqtt_improved.py  gmail_idle_to_mqtt_improved_patched.py  gmail_idle_to_mqtt_patched.py  gmail_imap_service.py  gmail_mqtt_bridge.py  gmail_sender.py  gui_settings.py  mqtt_mail_popup.py  pyproject.toml  test_improved_service.py
archive/: README_DOCKER.md  README_IMPROVED_SERVICE.md  gmail_idle_to_mqtt_improved_patched.py  run_test_mode.py
